# uin-ngin

./: .gitignore  LICENSE  README.md  lerna.json  main.py  manager.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: auto-create-pr.yml  automerge.yml  ci.yml  deploy.yml
adapters/: legacy.py
api/: mcp_server.py  server.py
api/metrics/: prometheus.py  registry.py
benchmark/: runner.py  suite.py
cli/: entry.py  main.py
core/: errors.py  lifecycle.py  model.py  normalize  schema.py  serialize.py  service.py  validate.py
core/utils/: edge_extraction.py
core/validation/: schema_validator.py
plugins/: manager.py
public/: gui.html  index.html
scripts/: README_ENV_SETUP.md  README_UI_PATCH.md  apply_uin_ui_patch.ps1  apply_uin_ui_patch.sh  check_deps.py  check_env.sh  cleanup_ui_patch.ps1  debug_cli.py  debug_record.py  run_local.py  set_env_unix.sh  set_env_windows.ps1  set_env_windows_vars.ps1
server/: comfyui-bridge.js  comfyui_bridge_py.py  package.json  test_smoke.js
src/: App.jsx  index.js  objectLibrary.js
src/uin_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_benchmark.py
tests/cli/: test_pipeline.py
tests/core/: test_roundtrip.py
tests/dashboard/: test_dashboard.py
tests/gui/: test_gui_exists.py
tests/integration/: test_python_bridge.py
tests/plugins/: test_manager.py
tests/server/: test_bridge_files.py
tests/workflows/: comfyui-uin-api-example.py  test_api_example.py  test_workflows.py
uin/: cli.py  init.py  validate.py
uin/core/: validate.py  version.py
uin/dashboard/: app.py  monitor.py  routes.py  ui.py
uin/pipeline/: context.py  steps.py
uin/plugins/: interfaces.py  manager.py
uin/utils/: io.py
uin_ngin/: __init__.py
uin_ngin/benchmark/: __init__.py  (+2 more)
workflows/: comfyui-uin-api-example.py  comfyui-uin-basic.json
(+2 files in other folders)
