# path: pyproject.toml
[project]
name = "uin-core"
version = "1.0.0"
description = "Universal Image Notation – Core Engine"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.5"]

[project.scripts]
uin = "uin.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
