# path: pyproject.toml
[project]
name = "uin-core"
version = "1.0.0"
description = "Universal Image Notation – Core Engine"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.5"]

[project.scripts]
uin = "uin.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = ">=4.8.0"
pillow = ">=10.0.0"
numpy = ">=1.24.0"
jsonschema = "^4.0"          # für Validation
pydantic = ">=2.0.0"         # für zukünftige Models
fastapi = ">=0.104.0"        # für API später
uvicorn = ">=0.24.0"         # für Server
mcp = ">=0.1.0"              # für MCP-Tools später
